--- a/db/Pipfile
+++ b/db/Pipfile
@@ -3,12 +3,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[requires]
+python_version = "3.10"
+
 [packages]
 bs4 = "*"
 requests = "*"
 
 [dev-packages]
 pylint = "*"
-
-[requires]
-python_version = "3.10"
+v = {editable = true,version = "*"}
