Finishes first-pass simulation implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "cSpell.words": [
-        "aiohttp"
+        "aiohttp",
+        "datamodels"
     ]
 }
