Adds basic bar plot & histplot for routes & gold cost/run

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ requests = "*"
 dataclasses-json = "*"
 aiohttp = "*"
 ratelimiter = "*"
+seaborn = "*"
+pandas = "*"
+matplotlib = "*"
 
 [dev-packages]
 pylint = "*"
