--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-bs4 = "*"
-requests = "*"
-dataclasses-json = "*"
-aiohttp = "*"
-ratelimiter = "*"
-seaborn = "*"
-pandas = "*"
-matplotlib = "*"
+bs4 = "==0.0.1"
+requests = "==2.28.0"
+matplotlib = "==3.5.2"
+pandas = "==1.4.3"
+seaborn = "==0.11.2"
+ratelimiter = "==1.2.0.post0"
+aiohttp = "==3.8.1"
+dataclasses-json = "==0.5.7"
 
 [dev-packages]
 pylint = "*"
