--- a/Pipfile
+++ b/Pipfile
@@ -4,18 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-bs4 = "==0.0.1"
-requests = "==2.28.0"
-matplotlib = "==3.5.2"
-pandas = "==1.4.3"
-seaborn = "==0.11.2"
-ratelimiter = "==1.2.0.post0"
-aiohttp = "==3.8.1"
-dataclasses-json = "==0.5.7"
-numpy = "==1.23.0"
+bs4 = "*"
+requests = "*"
+matplotlib = "*"
+pandas = "*"
+seaborn = "*"
+ratelimiter = "*"
+aiohttp = "*"
+dataclasses-json = "*"
+numpy = "*"
 
 [dev-packages]
 pylint = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.11"
